--- a/app/src/main/res/layout/fragment_imperial.xml
+++ b/app/src/main/res/layout/fragment_imperial.xml
@@ -7,14 +7,37 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:textSize="25sp"
+        android:layout_gravity="center"
         android:text="Imperial Tab"
         android:id="@+id/imperialText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/imperialVolumeEditText"
+        android:hint="Water Volume in Fluid Ounces"
+        android:text=""/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/imperialTemperatureEditText"
+        android:hint="Desired Temperature Increase in Fahrenheit"
+        android:text=""/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imperialButton"
-        android:text="Imperial"/>
+        android:id="@+id/imperialCalculateButton"
+        android:layout_gravity="center"
+        android:text="Calculate"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:layout_gravity="center"
+        android:text=""
+        android:id="@+id/imperialResult" />
 
 </LinearLayout>
