--- a/app/src/main/res/layout/fragment_metric.xml
+++ b/app/src/main/res/layout/fragment_metric.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,14 +8,36 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:textSize="25sp"
         android:text="Metric Tab"
         android:id="@+id/metricText" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/metricVolumeEditText"
+        android:hint="Water Volume in Millilitres"
+        android:text=""/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/metricTemperatureEditText"
+        android:hint="Desired Temperature Increase in Celsius"
+        android:text=""/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/metricButton"
-        android:text="Metric"/>
+        android:id="@+id/metricCalculateButton"
+        android:layout_gravity="center"
+        android:text="Calculate"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:layout_gravity="center"
+        android:text=""
+        android:id="@+id/metricResult" />
 
 </LinearLayout>
