Added menu and notifications

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnLoadImperial"
             android:text="Imperial History"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnNotification"
+            android:text="Notification"/>
     </LinearLayout>
 
 
